box around all faq, removed box around q's

--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -52,7 +52,10 @@
 	</div>
 	<div class="faq">
 		<h2>FAQ</h2>
-		<div>WHAT</div>
+		<div>
+			<h3>WHAT<h3>
+			<p>Vicereine is an electroclash/synthpop duo.</p>
+		</div>
 		<div>WHO</div>
 		<div>WHERE</div>
 		<div>WHY</div>
