added the questions

--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -51,16 +51,16 @@
 		</div>
 	</div>
 	<div class="faq">
-		<h2>FAQ</h2>
-		<div>
-			<h3>WHAT<h3>
-			<p>Vicereine is an electroclash/synthpop duo.</p>
-		</div>
-		<div>WHO</div>
-		<div>WHERE</div>
-		<div>WHY</div>
-		<div>HOW</div>
-		<div>WHEN</div>
+		<h2>FAQ</h2>		
+		<h4>Q: WHAT IS VICEREINE?</h4>
+		<p>A: Vicereine is an electroclash/synthpop duo.</p>
+		<h4>Q: WHO IS VICEREINE?</h4>
+		<h4>Q: WHERE IS VICEREINE?</h4>
+		<h4>Q: WHY IS VICEREINE?</h4>
+		<h4>Q: HOW IS VICEREINE?</h4>
+		<h4>Q: HOW DO YOU PRONOUNCE VICEREINE?</h4>
+		<h4>Q: WHAT DOES VICEREINE MEAN?</h4>
+		<h4>Q: WHEN CAN I SEE VICEREINE PERFORM?</h4>
 	</div>
 	<script src="js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
