--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -53,14 +53,26 @@
 	<div class="faq">
 		<h2>FAQ</h2>		
 		<h4>Q: WHAT IS VICEREINE?</h4>
-		<p>A: Vicereine is an electroclash/synthpop duo.</p>
+		<p>Vicereine is an electroclash/synthpop duo.</p>
 		<h4>Q: WHO IS VICEREINE?</h4>
+		<p>Remi X (vox/synth)<br>DJ EJ (bass/synth)</p>
 		<h4>Q: WHERE IS VICEREINE?</h4>
+		<p>San Francisco, CA (usually)</p>
 		<h4>Q: WHY IS VICEREINE?</h4>
+		<p>Desire to create.</p>
 		<h4>Q: HOW IS VICEREINE?</h4>
+		<p>We are doing great, thanks for asking.</p>
 		<h4>Q: HOW DO YOU PRONOUNCE VICEREINE?</h4>
+		<p>Vice-rain. it rhymes with "ice vein", "nice brain", "spice train", etc.</p>
 		<h4>Q: WHAT DOES VICEREINE MEAN?</h4>
+		<p>Vicereine literally translates to<br>
+		VICE - "in place of"<br>
+		REINE - "queen".<br>  
+		A viceroy/vicereine is a representative of a monarch/sovereign who rules over a kingdom or territory by proxy. We like the sound of it.</p>
 		<h4>Q: WHEN CAN I SEE VICEREINE PERFORM?</h4>
+		<p>We play shows as often as we can around the bay area. follow us on facebook and twitter to get updates.</p>
+		<h4>Q: HOW CAN I CONTACT VICEREINE?</h4>
+		<p>vicereinemusic@gmail.com</p>
 	</div>
 	<script src="js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
