faqs now toggle their display on click

--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -46,32 +46,30 @@
 		</div>
 	</body>
 	<div class="linkbar">
-		<div class="contacts">
 			{ <a href="https://twitter.com/vicereinemusic">TWITTER</a> / <a href="https://www.facebook.com/vicereinemusic">FACEBOOK</a> / <a href="https://www.youtube.com/user/vicereinemusic">YOUTUBE</a> / <a href="http://vicereinemusic.tumblr.com/">TUMBLR</a> }
-		</div>
 	</div>
 	<div class="faq">
-		<h2>FAQ</h2>		
-		<h4>Q: WHAT IS VICEREINE?</h4>
+		<a href="#"><h2>FAQ</h2></a>		
+		<a href="#"><h4>Q: WHAT IS VICEREINE?</h4></a>
 		<p>Vicereine is an electroclash/synthpop duo.</p>
-		<h4>Q: WHO IS VICEREINE?</h4>
+		<a href="#"><h4>Q: WHO IS VICEREINE?</h4></a>
 		<p>Remi X (vox/synth)<br>DJ EJ (bass/synth)</p>
-		<h4>Q: WHERE IS VICEREINE?</h4>
+		<a href="#"><h4>Q: WHERE IS VICEREINE?</h4></a>
 		<p>san francisco, CA (usually)</p>
-		<h4>Q: WHY IS VICEREINE?</h4>
+		<a href="#"><h4>Q: WHY IS VICEREINE?</h4></a>
 		<p>desire to create.</p>
-		<h4>Q: HOW IS VICEREINE?</h4>
+		<a href="#"><h4>Q: HOW IS VICEREINE?</h4></a>
 		<p>we are doing great, thanks for asking.</p>
-		<h4>Q: HOW DO YOU PRONOUNCE VICEREINE?</h4>
+		<a href="#"><h4>Q: HOW DO YOU PRONOUNCE VICEREINE?</h4></a>
 		<p>vice-rain. it rhymes with "ice vein", "nice brain", "spice train", etc.</p>
-		<h4>Q: WHAT DOES VICEREINE MEAN?</h4>
+		<a href="#"><h4>Q: WHAT DOES VICEREINE MEAN?</h4></a>
 		<p>Vicereine literally translates to<br>
 		VICE - "in place of"<br>
 		REINE - "queen".<br>  
 		a viceroy/vicereine is a representative of a monarch/sovereign who rules over a kingdom or territory by proxy. we like the sound of it.</p>
-		<h4>Q: WHEN CAN I SEE VICEREINE PERFORM?</h4>
+		<a href="#"><h4>Q: WHEN CAN I SEE VICEREINE PERFORM?</h4></a>
 		<p>we play shows as often as we can around the bay area. follow us on facebook and twitter to get updates.</p>
-		<h4>Q: HOW CAN I CONTACT VICEREINE?</h4>
+		<a href="#"><h4>Q: HOW CAN I CONTACT VICEREINE?</h4></a>
 		<p>vicereinemusic@gmail.com</p>
 	</div>
 	<script src="js/jquery-1.10.2.js"></script>
