style changes suggested by Remi

--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -50,31 +50,31 @@
 	</div>
 	<div class="faq">
 		<a href="#"><h2>FAQ</h2></a>		
-		<a href="#"><h4>Q: WHAT IS VICEREINE?</h4></a>
+		<a href="#"><h4>WHAT IS VICEREINE?</h4></a>
 		<p>Vicereine is an electroclash/synthpop duo.</p>
-		<a href="#"><h4>Q: WHO IS VICEREINE?</h4></a>
+		<a href="#"><h4>WHO IS VICEREINE?</h4></a>
 		<p>Remi X (vox/synth)<br>DJ EJ (bass/synth)</p>
-		<a href="#"><h4>Q: WHERE IS VICEREINE?</h4></a>
+		<a href="#"><h4>WHERE IS VICEREINE?</h4></a>
 		<p>san francisco, CA (usually)</p>
-		<a href="#"><h4>Q: WHY IS VICEREINE?</h4></a>
+		<a href="#"><h4>WHY IS VICEREINE?</h4></a>
 		<p>desire to create.</p>
-		<a href="#"><h4>Q: HOW IS VICEREINE?</h4></a>
+		<a href="#"><h4>HOW IS VICEREINE?</h4></a>
 		<p>we are doing great, thanks for asking.</p>
-		<a href="#"><h4>Q: HOW DO YOU PRONOUNCE VICEREINE?</h4></a>
+		<a href="#"><h4>HOW DO YOU PRONOUNCE VICEREINE?</h4></a>
 		<p>vice-rain. it rhymes with "ice vein", "nice brain", "spice train", etc.</p>
-		<a href="#"><h4>Q: WHAT DOES VICEREINE MEAN?</h4></a>
+		<a href="#"><h4>WHAT DOES VICEREINE MEAN?</h4></a>
 		<p>Vicereine literally translates to<br>
 		VICE - "in place of"<br>
 		REINE - "queen".<br>  
 		a viceroy/vicereine is a representative of a monarch/sovereign who rules over a kingdom or territory by proxy. we like the sound of it.</p>
-		<a href="#"><h4>Q: WHEN CAN I SEE VICEREINE PERFORM?</h4></a>
+		<a href="#"><h4>WHEN CAN I SEE VICEREINE PERFORM?</h4></a>
 		<p>we play shows as often as we can around the bay area. follow us on facebook and twitter to get updates.</p>
-		<a href="#"><h4>Q: HOW CAN I CONTACT VICEREINE?</h4></a>
+		<a href="#"><h4>HOW CAN I CONTACT VICEREINE?</h4></a>
 		<p>vicereinemusic@gmail.com</p>
 	</div>
 	<script src="js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	
+
 	<!-- Begin Attracta Include 2014-03-30 13:49 -->
 	<script type='text/javascript'> 
 	function attracta_loadjs(url) {
