--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<title>VICEREINE</title>
@@ -46,7 +45,7 @@
 		</div>
 	</body>
 	<div class="linkbar">
-			{ <a href="https://twitter.com/vicereinemusic">TWITTER</a> / <a href="https://www.facebook.com/vicereinemusic">FACEBOOK</a> / <a href="https://www.youtube.com/user/vicereinemusic">YOUTUBE</a> / <a href="http://vicereinemusic.tumblr.com/">TUMBLR</a> }
+			[ <a href="http://soundcloud.com/vicereinemusic">SOUNDCLOUD</a> / <a href="https://twitter.com/vicereinemusic">TWITTER</a> / <a href="https://www.facebook.com/vicereinemusic">FACEBOOK</a> / <a href="http://vicereinemusic.tumblr.com/">TUMBLR</a> ]
 	</div>
 	<div class="faq">
 		<a href="#"><h2>FAQ</h2></a>		
