cosmetic changes: remove boxshadow, line-height to 1.1, { to [

--- a/Vicereine Website/index.html
+++ b/Vicereine Website/index.html
@@ -46,7 +46,7 @@
 		</div>
 	</body>
 	<div class="linkbar">
-			{ <a href="https://twitter.com/vicereinemusic">TWITTER</a> / <a href="https://www.facebook.com/vicereinemusic">FACEBOOK</a> / <a href="https://www.youtube.com/user/vicereinemusic">YOUTUBE</a> / <a href="http://vicereinemusic.tumblr.com/">TUMBLR</a> }
+			[ <a href="https://twitter.com/vicereinemusic">TWITTER</a> / <a href="https://www.facebook.com/vicereinemusic">FACEBOOK</a> / <a href="https://www.youtube.com/user/vicereinemusic">YOUTUBE</a> / <a href="http://vicereinemusic.tumblr.com/">TUMBLR</a> ]
 	</div>
 	<div class="faq">
 		<a href="#"><h2>FAQ</h2></a>		
